# libmsg

./: .clang-format  .gitmodules  Makefile  config.mk  library.json  meson.build
.github/workflows/: build.yml
include/: meson.build
include/msg/: Msg.hpp  MsgHandler.hpp  MsgLog.hpp  MsgType.hpp  SerialCommunicator.hpp  Stream.hpp  arduino.h  msg.h  msghandler.h  msgstream.h  msgtypes.h  platform.h  types.hpp  unistd.h  w32serial.h
include/msg/msgstream/: unistd.h
include/msg/stream/: Stream.hpp
src/: Makefile  meson.build
src/arduino/: arduino.cpp
src/msg/: Msg.cpp  MsgHandler.cpp  MsgLog.cpp  msg.c  msg.cpp  msghandler.c
src/msg/communicator/: Request.hpp  SerialCommunicator.cpp  WorkerThread.cpp  WorkerThread.hpp
src/msg/util/: priorityQueue.cpp
src/msgstream/unistd/: unistd.c
src/unistd/: connect.c  unistd.c
src/w32serial/: available.c  connect.c  device.c  device.h  flush.c  read.c  timeout.c  w32.h  w32serial.c  write.c
subprojects/: catch2.wrap
test/: Makefile  MsgBaseTests.cpp  MsgHandlerTest.cpp  MsgTest.cpp  SerialCommunicatorTest.cpp  link.c  meson.build  msglib_cpp_tests.cpp  unistd-test.c  utils.c  utils.h
test/arduino/: README.md  host.c  platformio.ini
test/arduino/src/: test.cpp
test/include/msg/test/: BaseMsgTests.hpp  DualPort.hpp
test/util/: DualPort.cpp
